pricing section added

--- a/index.html
+++ b/index.html
@@ -111,55 +111,6 @@
         </div>
       </div>
     </section>
-
-    <!-- <section class="features">
-      <div class="container">
-        <div class="features__item">
-          <div class="row">
-            <div class="col-lg-6">
-              <div class="iPad__pic">
-                <img src="img/iPad .png" alt="" />
-              </div>
-              <div class="iPhone__pic">
-                <img src="img/iPhone.png" alt="" />
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="features__text">
-                <h6 class="features__title">We have great features with</h6>
-                <h6 class="features__subTitle">
-                  Unlimited Customization Features
-                </h6>
-                <p class="features__text">
-                  There are many variations of passages of Lorem Ipsum
-                  available, the majorityalteration make difficult
-                </p>
-              </div>
-              <ul class="features__list">
-                <li>
-                  <a href="#"
-                    >More wordpress featrures with great responsive design</a
-                  >
-                </li>
-                <li>
-                  <a href="#">Corporate flat design with necessary elements</a>
-                </li>
-                <li>
-                  <a href="#">Free vector shape and mockup by great designer</a>
-                </li>
-                <li>
-                  <a href="#"
-                    >Full one page flat and modern trend following goods</a
-                  >
-                </li>
-              </ul>
-              <a href="" class="features__btn">Read more</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
-
     <section class="unlimited">
       <div class="container">
         <div class="unlimited__back">
@@ -305,6 +256,88 @@
           <div class="col-sm-6 col-12">
             <div class="resourse__image">
               <img src="img/resourse.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="pricing">
+      <div class="container">
+        <h2>Get Idea About</h2>
+        <h3>Pricing plan</h3>
+        <div class="pricing__items">
+          <div class="row">
+            <div class="col-md-4 col-12">
+              <div class="pricing__item">
+                <div class="pricing__img">
+                  <img src="img/Book.png" alt="" />
+                </div>
+                <div class="pricing__head">Student</div>
+                <div class="price">
+                  <span class="price__currency">$</span>
+                  <span class="price__value">39</span>
+                  <span class="price__period">/mo</span>
+                </div>
+                <div class="pricing__features">
+                  <p class="pricing__feature">6 GB storage</p>
+                  <p class="pricing__feature">Fast Brandwidth</p>
+                  <p class="pricing__feature">
+                    Responsive
+                  </p>
+                  <div class="pricing__feature">
+                    Customization
+                  </div>
+                </div>
+                <div class="pricing__btns">
+                  <a href="" class="pricing__btn">Sign Up</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 col-12">
+              <div class="pricing__item">
+                <div class="pricing__img">
+                  <img src="img/bag.png" alt="" />
+                </div>
+                <div class="pricing__head">Professional</div>
+                <div class="price">
+                  <span class="price__currency">$</span>
+                  <span class="price__value">59</span>
+                  <span class="price__period">/mo</span>
+                </div>
+                <div class="pricing__features">
+                  <p class="pricing__feature">6 GB storage</p>
+                  <p class="pricing__feature">Fast Brandwidth</p>
+                  <p class="pricing__feature">Responsive</p>
+                  <div class="pricing__feature">
+                    Customization
+                  </div>
+                </div>
+                <div class="pricing__btns">
+                  <a href="" class="pricing__btn">Sign Up</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 col-12">
+              <div class="pricing__item">
+                <div class="pricing__img">
+                  <img src="img/shopping Bag.png" alt="" />
+                </div>
+                <div class="pricing__head">Unlimited</div>
+                <div class="price">
+                  <span class="price__currency">$</span>
+                  <span class="price__value">99</span>
+                  <span class="price__period">/mo</span>
+                </div>
+                <div class="pricing__features">
+                  <p class="pricing__feature">6 GB storage</p>
+                  <p class="pricing__feature">Fast Brandwidth</p>
+                  <p class="pricing__feature">Responsive</p>
+                  <div class="pricing__feature">Customization</div>
+                </div>
+                <div class="pricing__btns">
+                  <a href="" class="pricing__btn">Sign Up</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
